<?xml version="1.0" encoding="utf-8"?>
<!--
  French Revolutionary Calendar Android Widget
  Copyright (C) 2011 - 2017 Carmen Alvarez
  
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 3
  of the License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program; if not, see <http://www.gnu.org/licenses/>.

-->
<resources>

    <string name="app_name">French Calendar</string>
    <string name="app_name_wide">French Calendar (horizontal)</string>
    <string name="app_name_narrow">French Calendar (vertical)</string>
    <string name="app_name_minimalist">French Calendar (minimalist)</string>
    <string name="app_full_name">French Calendar</string>
    <string name="author" translatable="false">Carmen Alvarez (c@rmen.ca)</string>
    <string name="description">Widget which displays the current date and time in the French Republican Calendar.</string>
    <string name="credits">Credits:</string>
    <string name="wikipedia">* Wikipedia article: http://en.wikipedia.org/wiki/French_Republican_Calendar</string>
    <string name="equinox_tool">* AstroLib C++ program by Mark Huss, to determine the first day of autumn in each year: http://mhuss.com/AstroLib/</string>
    <string name="roman_numeral_algorithm">* Fraser Chapman for the Roman numeral algorithm: https://goo.gl/xw65ng</string>
    <string name="wearable">* BoD, for the wearable implementation: http://jraf.org/</string>
    <string name="translation_italian">* Alfonso Fusco, for providing Italian translations.</string>
    <string name="lib_colorpicker_pref">* Sergey Margaritov, for his ColorPickerPreference library</string>
    <string name="lib_font_pref">* Niklas Baudy, for his VNTFontListPreference library</string>
    <string name="github">Project on GitHub:</string>
    <string name="link_github" translatable="false">https://github.com/caarmen/FRCAndroidWidget</string>
    <string name="widget_settings">French Calendar Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="setting_category_widget">Widget</string>
    <string name="setting_category_other">Other</string>
    <string name="setting_method">Calculation method</string>
    <string name="setting_method_summary">How the first day of each year is determined: %s</string>
    <string name="setting_roman_numeral">Roman numeral year</string>
    <string name="setting_show_time">Display time (decimal clock)</string>
    <string name="setting_show_day_of_year">Show day of the year</string>
    <string name="setting_language">Language</string>
    <string name="setting_language_summary">%s</string>
    <string name="setting_custom_color_enabled">Use a custom color</string>
    <string name="setting_custom_color_summary_enabled">Currently using your custom color.</string>
    <string name="setting_custom_color_summary_disabled">Currently using predefined colors (color changes every month).</string>
    <string name="setting_custom_color">Custom color</string>
    <string name="setting_custom_font">Font</string>
    <string name="setting_system_notification">System notification</string>
    <string name="setting_system_notification_summary">Show a system notification once a day</string>
    <string name="setting_android_wear">Android Wear</string>
    <string name="setting_android_wear_summary">Show a notification once a day on connected Android Wear devices</string>
    <string name="chooser_title">Choose an app</string>
    <string name="popup_action_share">Share</string>
    <string name="popup_action_settings">Settings</string>
    <string name="popup_action_converter">Converter</string>
    <string name="popup_action_search">Lookup \'%s\'</string>
    <string name="share_subject">%1$s, %2$d %3$s %4$s</string>
    <string name="share_body">Today is %1$s, %2$d %3$s %4$s.
\n\n\
The current time is %5$s.
\n\n\
%6$s of today is the %7$s.
\n\n\
It has been %8$d days since the start of the Republic.</string>
    <string name="notification_text">%1$s, %2$d %3$s %4$s</string>
    <string name="notification_long_text">Today is %1$s, %2$d %3$s %4$s.
\n\
%5$s of today is the %6$s.</string>
    <string name="about">About</string>
    <string name="message_save">Press back to save your settings.</string>

    <string name="dialog_color_picker">Choose a color</string>
    <string name="press_color_to_apply">Tap on the color to apply</string>
    <string name="default_font" translatable="false">Rochester-Regular.ttf</string>
    <string name="fonts_folder" translatable="false">fonts</string>

    <string name="help">Help</string>
    <string name="romme_description">\n<b>Romme</b>\n<small>Like the Gregorian calendar: Leap years are years divisible by four, but not by 100 (except by 400).</small></string>
    <string name="equinox_description">\n<b>Equinox</b>\n<small>Leap years vary so that 1 Vendémiaire always falls on the autumn equinox.</small></string>
    <string name="von_madler_description">\n<b>von Mädler</b>\n<small>Leap years are years divisible by four, but not by 128.</small></string>
    <string name="date_format">%1$s, %2$d %3$s %4$s\n%5$s: %6$s</string>
    <string name="method_romme">Romme</string>
    <string name="method_equinox">Equinox</string>
    <string name="method_von_madler">von Mädler</string>

</resources>
