<?xml version="1.0" encoding="utf-8"?>
<!--
  French Revolutionary Calendar Android Widget
  Copyright (C) 2011 - 2017 Carmen Alvarez
  
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 3
  of the License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program; if not, see <http://www.gnu.org/licenses/>.

-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/aboutview"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/vscroll"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="64dp"
        android:paddingTop="64dp" >

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/app_full_name"
            android:textSize="38sp" />

        <TextView
            style="@style/AboutEntryTextView"
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="22sp" />

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/author"
            android:textSize="22sp" />

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/description"/>

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/credits"/>

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wikipedia"/>

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equinox_tool"/>

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roman_numeral_algorithm"/>

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wearable"/>

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translation_italian"/>

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_colorpicker_pref"/>

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_font_pref"/>

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/github"/>

        <TextView
            style="@style/AboutEntryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_github"/>
    </LinearLayout>

</ScrollView>
