<?xml version="1.0" encoding="utf-8"?><!--
  French Revolutionary Calendar Android Widget
  Copyright (C) 2011 - 2014 Carmen Alvarez
  
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
  of the License, or (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program; if not, write to the Free Software
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="widget_settings"
    android:title="@string/widget_settings">

    <ListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/setting_method"
        android:entries="@array/setting_method_labels"
        android:entryValues="@array/setting_method_values"
        android:key="setting_method"
        android:summary="@string/setting_method_summary"
        android:title="@string/setting_method" />
    <ListPreference
        android:defaultValue="day_of_year"
        android:dialogTitle="@string/setting_detailed_view"
        android:entries="@array/setting_detailed_view_labels"
        android:entryValues="@array/setting_detailed_view_values"
        android:key="setting_detailed_view"
        android:title="@string/setting_detailed_view" />

    <ListPreference
        android:defaultValue="fr"
        android:dialogTitle="@string/setting_language"
        android:entries="@array/setting_language_labels"
        android:entryValues="@array/setting_language_values"
        android:key="setting_language"
        android:title="@string/setting_language" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_android_wear"
        android:summary="@string/setting_android_wear_summary"
        android:title="@string/setting_android_wear" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_custom_color_enabled"
        android:title="@string/setting_custom_color" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:defaultValue="@android:color/white"
        android:dependency="setting_custom_color_enabled"
        android:key="setting_custom_color"
        android:title="@string/setting_color" />


    <Preference android:title="@string/about">
        <intent android:action="ca.rmen.android.frcwidget.FRCAboutActivity" />
    </Preference>

</PreferenceScreen>