<?xml version="1.0" encoding="utf-8"?><!--
  French Revolutionary Calendar Android Widget
  Copyright (C) 2016 Carmen Alvarez

  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 3
  of the License, or (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program; if not, see <http://www.gnu.org/licenses/>.

-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            tools:ignore="UnusedAttribute" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:shrinkColumns="1">

            <TableRow android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/method_romme" />

                <TextView
                    android:id="@+id/frcDateRomme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Primidi 1 brumaire 222\n(Pomme)" />
            </TableRow>

            <TableRow android:layout_marginBottom="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/method_equinox" />

                <TextView
                    android:id="@+id/frcDateEquinox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Primidi 1 brumaire 222\n(Pomme)" />
            </TableRow>


            <TableRow android:layout_marginBottom="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/method_von_madler" />

                <TextView
                    android:id="@+id/frcDateVonMadler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Primidi 1 brumaire 222\n(Pomme)" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/help"
            android:src="@drawable/ic_action_help"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</ScrollView>
